--- a/source/main.scss
+++ b/source/main.scss
@@ -1,4 +1,4 @@
-$background: #ddd;
+$background: #eee;
 
 body{
 	background: $background;
@@ -8,4 +8,22 @@ body{
 	height:100px;
 	width: 100px;
 	background: turquoise;
+}
+.header{
+	background: #414142;
+	color: white;
+}
+.header .link-wrapper > a{
+	padding:10px;
+	float:left;
+	color:white;
+	display:block;
+}
+div.header .link-wrapper > a.active{
+	background:#222;
+	text-decoration:none;
+}
+.header .link-wrapper > a:hover{
+	background: #333;
+	text-decoration:none;
 }
