--- a/source/main.scss
+++ b/source/main.scss
@@ -1,20 +1,23 @@
 $background: #eee;
 
 body{
-	background: $background;
+	background: $background !important;
 }
-
-#pw{
-	height:100px;
-	width: 100px;
-	background: turquoise;
+#react-container{
+	padding-left:0;
+	padding-right:0;
+}
+.mt-5{
+	margin-top:5px;
 }
 .header{
 	background: #414142;
 	color: white;
 }
 .header .link-wrapper > a{
-	padding:10px;
+	padding:20px;
+	padding-top:15px;
+	padding-bottom:15px;
 	float:left;
 	color:white;
 	display:block;
@@ -26,4 +29,116 @@ div.header .link-wrapper > a.active{
 .header .link-wrapper > a:hover{
 	background: #333;
 	text-decoration:none;
+}
+.profile__container{
+	margin-top:20px;
+	.profile__userDetails{
+		padding-left: 20px;
+		padding-right: 20px;
+		padding-top: 100px;
+		padding-bottom:20px;
+		background:white;
+		position:relative;
+		background-image: url('../assets/cover.jpg');
+		background-size:cover;
+		background-position:center bottom;
+		color:white;
+		z-index:1;
+		.profile__scrim{
+			position:absolute;
+			top:0;
+			left: 0;
+			width:100%;
+			height: 100%;
+			background: rgba(0,0,0,0.5);
+			z-index:-1;
+		}
+		.profile__connections{
+			position:absolute;
+			bottom:15px;
+			right:15px;
+		}
+		.profile__badges{
+			margin-top:3px;
+			div{
+				padding:8px;
+				padding-top:3px;
+				padding-bottom: 3px;
+				background: yellow;
+				font-size: 12px;
+				color:#333;
+				font-weight: bold;
+				display:inline-block;
+				margin-right: 5px;
+			}
+		}
+	}
+}
+.profile__picture{
+	margin-right:20px;
+	display:inline-block;
+	vertical-align:middle;
+}
+.profile__details{
+	display:inline-block;
+	vertical-align:middle;
+	.profile__name{
+		font-size:26px;
+		font-weight:bold;
+		text-shadow: 1px 1px black;
+	}
+}
+.profile__buttons{
+	position: absolute;
+	top:15px;
+	right:15px;
+	.btn-outline:first-of-type{
+		margin-right: 5px;
+	}
+	.btn-outline{
+		border:1px solid white;
+		color:white;
+		border-radius:0;
+	}
+	.btn-outline:hover{
+		border:1px solid springgreen;
+		color: springgreen;
+	}
+}
+.profile__badge-slider{
+	padding:10px;
+	padding-top:5px;
+	padding-bottom:5px;
+	text-align:center;
+	font-size:12px;
+	cursor: pointer;
+	background:white;
+	border-bottom:2px solid #ddd;
+}
+.profile__badge-slider.active{
+	padding-top:15px;
+	padding-bottom:5px;
+	border-bottom:1px solid #ddd;
+	cursor:default;
+	.profile__badge-container{
+		display: inline-block;
+		vertical-align: top;
+		margin-right: 10px;
+		margin-left: 10px;
+		margin-bottom: 10px;
+		background:#eee;
+		border:1px solid #ddd;
+		padding:15px;
+		text-align: center;
+		> div{
+			margin-top: 15px;
+		}
+	}
+}
+
+@media only screen and (min-device-width : 320px) and (max-device-width : 480px) {
+	.profile__container .profile__userDetails .profile__connections{
+		position:static;
+		margin-top: 10px;
+	}
 }
